# earthcare-data-downloader

./: .gitignore  CONTRIBUTING.md  DEPLOY_STREAMLIT.md  INSTALLATION.md  LICENSE  Makefile  README.md  README_STREAMLIT.md  __init__.py  app_streamlit.py  aux_data.py  dev.ps1  earthcare_downloader.py  earthcare_downloader_gui.py  launch_earthcare_gui.bat  pyproject.toml  quick_start.bat  requirements.txt  requirements_gui.txt  requirements_streamlit.txt
.streamlit/: config.toml
examples/: README.md  advanced_usage.py  basic_usage.py  gui_example.py
platform_change_to_maap/: download_initial_tests.ipynb  maap_earthcare_downloader.py
tests/: __init__.py  test_downloader.py
