[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "earthcare-downloader"
version = "1.0.0"
description = "A comprehensive tool for downloading EarthCARE satellite products from ESA's OADS"
authors = [
    {name = "---------", email = "----------"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
]
keywords = ["earthcare", "satellite", "downloader", "atmospheric", "cloud", "esa", "oads"]

dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "tqdm>=4.64.0",
    "chardet>=5.0.0",
]

[project.optional-dependencies]
gui = [
    "tkinter",
]
dev = [
    "black>=22.0.0",
    "flake8>=5.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
all = [
    "scikit-learn",
    "matplotlib",
    "h5py",
    "xarray",
    "cartopy",
    "pyproj",
    "scipy",
    "statsmodels",
]

[project.urls]
Homepage = "https://github.com/your-username/earthcare_downloader"
Documentation = "https://github.com/your-username/earthcare_downloader#readme"
Repository = "https://github.com/your-username/earthcare_downloader"
"Bug Tracker" = "https://github.com/your-username/earthcare_downloader/issues"
Changelog = "https://github.com/your-username/earthcare_downloader/blob/main/CHANGELOG.md"

[project.scripts]
earthcare-downloader-gui = "earthcare_downloader.earthcare_downloader_gui:main"

[tool.setuptools]
packages = ["earthcare_downloader"]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]